--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="menu-container">
                 <div class="menu-item">
                     <h3>Pepperoni Passion</h3>
-                    <p>Mozzarella, parmesan, red spicey sauce with mini cup and char pepperoni</p>
+                    <p>Mozzarella, red spicey sauce with mini cup and char pepperoni</p>
                         <p>SM $10.99 | LG $13.99</p>
                 </div>
                 <div class="menu-item">
